# quantity_survey

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
quantity_survey/: __init__.py  boot.py  hooks.py  install.py  modules.txt  notifications.py  patches.txt  validate_compliance.py
quantity_survey/ai/: __init__.py  smart_defaults.py
quantity_survey/analytics/: __init__.py  cost_predictor.py
quantity_survey/bim/: __init__.py  integrator.py
quantity_survey/collaboration/: __init__.py
quantity_survey/config/: __init__.py  desktop.py  quantity_survey.py
quantity_survey/patches/v1_0/: setup_default_data.py
quantity_survey/public/: quantity-survey-sw.js
quantity_survey/public/css/: mobile.css  quantity_survey.css
quantity_survey/public/icons/: README.md
quantity_survey/public/images/: README.md
quantity_survey/public/js/: boq.js  boq_list.js  cost_plan.js  final_account.js  mobile.js  payment_certificate_list.js  quantity_survey.js  tender.js  valuation.js  valuation_list.js  variation_order.js
quantity_survey/quantity_surveying/dashboard_chart/boq_vs_actual_analysis/: boq_vs_actual_analysis.json
quantity_survey/quantity_surveying/dashboard_chart/final_account_status/: final_account_status.json
quantity_survey/quantity_surveying/workspace/: quantity_surveying.json
quantity_survey/tasks/: daily_tasks.py  monthly_tasks.py  weekly_tasks.py
quantity_survey/translations/: README.md  ar.csv  en.csv  fr.csv  pt.csv  sw.csv  tr.csv
quantity_survey/utils/: bulk_operations.py  common_utils.py  export_utilities.py  item_hooks.py  project_hooks.py
(+125 files in other folders)
