[project]
name = "quantity_survey"
authors = [
    { name = "Monak", email = "amonak@monakerp.com"}
]
description = "Comprehensive Quantity Surveying Module for Monak v8"
requires-python = ">=3.8"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project.urls]
Home = "https://github.com/amonak/quantity_survey"
Documentation = "https://github.com/amonak/quantity_survey"

[tool.pine.dev-dependencies]
watch = [
    "quantity_survey"
]

[tool.black]
line-length = 99

[tool.isort]
line_length = 99
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
indent = "\t"
